<resources>
    <string name="app_name">Alarms</string>
    <string name="Title">Alarms</string>
    <string name="Confirm">Confirm</string>
    <string name="Button1">Location Alarm</string>
    <string name="Question">Enter the time you want in between alarms (in minutes)</string>
    <string name="submit">Submit</string>
    <string name="timerTime"></string>
    <string name="cancel">Cancel</string>
    <string name="Continue">continue</string>
    <string name="Move">Get up and move!</string>
    <string name="Alert">Alert!</string>
    <string name="oneTime">One-Time/Repeat</string>
    <string name="repeat">Repeat</string>
    <string name="app_name2">Alarm</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Alarms</string>
    <string-array name="alarm_array">
        <item>One-Time</item>
        <item>Repeating</item>
        <item>Location</item>
    </string-array>
    <string name="Message">Alarm Message</string>
    <string name="Time">00:00 AM/PM</string>
    <string name="Date">mm/dd/yyyy</string>

</resources>
